--- a/css/style.css
+++ b/css/style.css
@@ -9408,11 +9408,11 @@ textarea.form-control {
     text-transform: uppercase; }
 
 .contact-section .contact-form {
-  width: 100%; }
+  width: 94%; }
 
 .contact-section .img {
   width: 100%;
-  background-position: top center; }
+  background-position: 60px center; }
   @media (max-width: 991.98px) {
     .contact-section .img {
       height: 500px; } }
